@@ -33,7 +33,7 @@ KXDICT_SELF, KXDICT_TYPE, KXDICT_MESSAGE, KXDICT_EQ,
 KXDICT_PRINT, KXDICT_VALUE, KXDICT_VALUE1, KXDICT_VALUE2,
 KXDICT_VALUE3, KXDICT_VALUE_WITH_LIST, KXDICT_INIT, 
 KXDICT_DNU, KXDICT_AS_STRING, KXDICT_HASH, 
-KXDICT_KEY,
+KXDICT_KEY, KXDICT_PRINTSTRING,
 
 KXDICTIONARY_SIZE
 } KxCoreDictionary;
